--- a/action.yml
+++ b/action.yml
@@ -1,19 +1,19 @@
 name: render-drawio
-description: 'Action description' # description of the action
+description: 'Looks for drawio files in a repo, and renders PNGs of each of them in place.'
 inputs:
-  input-1:  # id of input. Github recommendeds using lowercase input ids.
-    description: 'Name of person'   # Description needed for input-1
-    required: false   # optional input
-    default: 'David Beckham' # default value needed for input-1
-  input-2:  # id of input
-    description: 'Provide additional message'
+  GH_TOKEN:
+    description: GitHub Token used to interact with GitHub API
     required: true
-outputs: # Output section is an optional parameter.
-  time: # id of output
-    description: 'The time when this action was performed'
+  IGNORE_FILE_PATTERNS:
+    description: Regular expressions for the files to be ignored. The inputs are specified within square brackets where each input regular expression is enclosed within double quotes, comma separated and with correct indentations.
+    required: false
+  COMMIT_MESSAGE:
+    description: Commit message to use when commiting fixes.
+    required: false
 runs:
   using: "docker"
   image: "Dockerfile"
   args:
-    - ${{inputs.input-1}}
-    - ${{inputs.input-2}}
+    - ${{inputs.GH_TOKEN}}
+    - ${{inputs.IGNORE_FILE_PATTERNS}}
+    - ${{inputs.COMMIT_MESSAGE}}
